--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyAKbEqjzg9D2sKdAyrROYYNZUMZowOhHPA",
+        authDomain: "keeper-project-app.firebaseapp.com",
+        projectId: "keeper-project-app",
+        storageBucket: "keeper-project-app.appspot.com",
+        messagingSenderId: "889866760730",
+        appId: "1:889866760730:web:4abf88c42276ec4bda97a3",
+        measurementId: "G-PVV4J1K599"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
     <title>QR Scanner App</title>
   </head>
   <body>
